# euler-haskell

./: .gitignore  .pre-commit-config.yaml  README.md  euler-haskell.cabal
src/: Problem-1.hs  Problem-2.hs  Problem-3.hs
