-- The name of the package.
name:                euler-haskell

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0

-- A short (one-line) description of the package.
synopsis:            Learning the Haskell language by solving Project Euler problems.

-- URL for the project homepage or repository.
homepage:            https://github.com/bwbaugh/euler-haskell

-- The license under which the package is released.
license:             AllRightsReserved

-- The package author(s).
author:              Wesley Baugh

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          wesley@bwbaugh.com

-- A copyright notice.
copyright: 2015 Wesley Baugh         

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:  README.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable problem-1
  -- .hs or .lhs file containing the Main module.
  main-is:             Problem-1.hs
  
  -- Modules included in this executable, other than Main.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.8 && <4.9
  
  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  